--- a/文章/安卓浏览器/index.html
+++ b/文章/安卓浏览器/index.html
@@ -2,13 +2,7 @@
 
 <head>
     <title>安卓浏览器推荐:猪圈-pig810运营</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.staticfile.org/twitter-bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.staticfile.org/twitter-bootstrap/5.3.2/js/bootstrap.min.js"></script>
-    <link href="https://cdn.bootcdn.net/ajax/libs/bootstrap-icons/1.9.1/font/bootstrap-icons.css" rel="stylesheet">
-    <script src="/dark.js"></script>
-    <link rel="stylesheet" href="/index.css">
+    <script src="/js/head.js"></script>
     <style>
         .hp {
             writing-mode: vertical-rl;
@@ -24,50 +18,11 @@
             color: #ffffff;
         }
     </style>
-    <script src="https://nqhyee.vsc.icu/view-image.min (1).js"></script>
-    <script>
-        window.ViewImage && ViewImage.init('.img-fluid');
-    </script>
-
 </head>
 
 <body>
-    <!--导航栏-->
-    <nav class="navbar navbar-expand-lg navbar-light sticky-top shadow-sm">
-        <div class="container-fluid d-flex"><a class="navbar-brand" href="#">
-                <img src="https://cdnjson.com/images/2023/10/28/212239qsGyuK1o4RRFyM4E.png" alt="Logo" width="30" height="40" class="d-inline-block align-text-top"> 猪圈
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span> </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="/">首页</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/下载.html">下载</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/留言.html">留言</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/blog.html">文章</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/表情包">表情包</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/小玩意导航页.html">小工具&amp;小游戏</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/关于">关于</a></li>
-                    <form>
-                        <input class="form-control" type="text" id="searchInput" placeholder="搜索">
-                    </form>
-                    <!-- 搜索结果 -->
-                    <br>
-                    <ul class="searchResults rounded shadow">
-                        <!-- 搜索结果将会动态加载到这里 -->
-                    </ul>
-                    <!-- JavaScript 代码 -->
-                    <script src="/search.js"></script>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <!--回到顶部-->
-    <div class="fixed-bottom">
-        <a href="#" class="btn btn-primary bth-sm m-2">
-            <i class="bi bi-arrow-bar-up"></i>
-        </a>
-    </div>
+    <meta charset="utf-8"/>  
+    <script src="/js/navbar.js"></script>
     <!--标题-->
     <div class="m-3">
         <div class="shadow-sm p-3 mb-5 bg-body-tertiary rounded text-center">
@@ -98,33 +53,30 @@
         <div class="mask">废话</div>在pig810教盲憨用邮箱时，我看到了盲憨的屎山浏览器，甚至比我的网站代码还屎山（迫真）
         为什么不要用屎山浏览器？
         因为屎山浏览器都是小厂糊的，盗你数据不用说了，功能还贼少，想去Github，没个翻译，去广告十分甚至九分多的网站，没个广告截拦器
-        更重要的事，浏览器内核不是chrome就是webkit就是firefox就是X5所以除了好用不好用，没啥区别，都是一类轮子
+        更重要的事，浏览器内核不是blink就是webkit就是gekco要么就是用的系统的webview就是所以除了好用不好用，没啥区别，都是一类轮子
         不试不知道，逝逝就逝逝
         </p>
-        <img class="img-fluid rounded" src="https://cdnjson.com/images/2023/10/22/Screenshot_20231016_213102_com.moying.browserplus.jpg" alt="Screenshot_20231016_213102_com.moying.browserplus.jpg" border="0">
+        <img class="img-fluid rounded img" src="https://cdnjson.com/images/2023/10/22/Screenshot_20231016_213102_com.moying.browserplus.jpg" alt="Screenshot_20231016_213102_com.moying.browserplus.jpg" border="0">
         <p class="text-center">没有翻译</p>
-        <img class="img-fluid rounded" src="https://cdnjson.com/images/2023/10/22/Screenshot_20231016_212939_com.moying.browserplus.jpg" alt="Screenshot_20231016_212939_com.moying.browserplus.jpg" border="0">
+        <img class="img-fluid rounded img" src="https://cdnjson.com/images/2023/10/22/Screenshot_20231016_212939_com.moying.browserplus.jpg" alt="Screenshot_20231016_212939_com.moying.browserplus.jpg" border="0">
         <p class="text-center">sb广告</p>
         <p>推荐大家用<strong>edge，foss或Iceraven（冰鸦）</strong><br>
-        <h4>pig810在用的-edge-基于chrome</h4>
+        <h4>edge-基于chromium</h4>
         <br>
-        真心推荐大家用这个，翻译(微软自家的） 广告截拦（adblock plus）收藏夹，资讯都有。但是有点小bug，不影响使用，更新很及时，内核时刻最新
+        真心推荐大家用这个，翻译(微软自家的） 广告截拦（adblock plus）收藏夹，资讯都有。但是有点《小》bug，更新很及时，内核时刻最新
         附上图片
         </p>
-        <img class="img-fluid rounded" src="https://cdnjson.com/images/2023/10/22/Screenshot_20231022_123836_com.microsoft.emmx.jpg" alt="Screenshot_20231022_123836_com.microsoft.emmx.jpg" border="0" />
-        <img class="img-fluid rounded" src="https://cdnjson.com/images/2023/10/22/Screenshot_20231022_123644_com.microsoft.emmx.jpg" alt="Screenshot_20231022_123644_com.microsoft.emmx.jpg" border="0">
+        <img class="img-fluid rounded img" src="https://cdnjson.com/images/2023/10/22/Screenshot_20231022_123836_com.microsoft.emmx.jpg" alt="Screenshot_20231022_123836_com.microsoft.emmx.jpg" border="0" />
+        <img class="img-fluid rounded img" src="https://cdnjson.com/images/2023/10/22/Screenshot_20231022_123644_com.microsoft.emmx.jpg" alt="Screenshot_20231022_123644_com.microsoft.emmx.jpg" border="0">
         <p class="text-center">翻译，广告截拦，主页
         <p>
-        <h4>自由软件-foss-基于chrome</h4>
+        <h4>自由软件-foss-无内核</h4>
         <p>一听这名字就很foss（更新随缘</p>
         <img class="img-fluid rounded" src="https://cdnjson.com/images/2023/10/22/Screenshot_20231016_211734_de.baumann.browser.jpg" alt="Screenshot_20231016_211734_de.baumann.browser.jpg" border="0" />
         <p>
         <h4>firefox分支-Iceraven</h4><br>
-        很小众，和edge差不多，就是是firefox内核，有一个天大的优点-能加插件！！！！，pig810用的网站视频播放器video.js在上面亿问题
+        很小众，和edge差不多，就是是gekco内核，有一个天大的优点-能加插件！！！！
         </p>
-        <img class="img-fluid rounded" src="https://cdnjson.com/images/2023/10/22/Screenshot_20231022_101401_io.github.forkmaintainers.iceraven.jpg" alt="Screenshot_20231022_101401_io.github.forkmaintainers.iceraven.jpg" border="0" />
-        <p class="text-center">霸屏的屑，有跨越视口的宽度</p>
-
         <!--评论系统-->
         <link href="https://cdn.staticfile.org/waline/2.15.8/waline.min.css" rel="stylesheet">
         <div id="waline"></div>
@@ -146,21 +98,6 @@
                 dark: 'auto',
             });
         </script>
-    <!--页脚-->
-    <div class="mt-5 p-4 bg-dark text-white text-center">
-        <span id="runtime_span"></span>
-        <script src="/time.js"></script>
-        <br>
-        <a href="https://stats.uptimerobot.com/xE8LGHmDxB">网站监测</a>
-        <p>pig810负责运营</p>
-        <div class="btn-group">
-            <a href="/sitemap.xml" class="btn btn-warning">网站地图查看
-                <i class="bi bi-diagram-2"></i>
-            </a>
-            <a href="https://dns.rnmcnm.com" class="btn btn-primary">域名由日出提供
-                <i class="bi bi-globe"></i>
-            </a>
-        </div>
     </div>
 </body>
 
