--- a/关于/index.html
+++ b/关于/index.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+    <meta charset="utf-8"/>
     <script src="/js/navbar.js"></script>
     <div class="m-3">
         <h2 class="text-center">关于猪圈</h2>
