--- a/文章/ksweb网站/index.html
+++ b/文章/ksweb网站/index.html
@@ -3,61 +3,15 @@
 
 <head>
     <title>ksweb网站:猪圈-pig810运营</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.staticfile.org/twitter-bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.staticfile.org/twitter-bootstrap/5.3.2/js/bootstrap.min.js"></script>
-    <link href="https://cdn.staticfile.org/bootstrap-icons/1.11.0/font/bootstrap-icons.min.css" rel="stylesheet">
-    <script src="/dark.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/styles/default.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/highlight.min.js"></script>
-    <script src="/view-image.min (1).js"></script>
-    <script>
-        window.ViewImage && ViewImage.init('.mx-auto');
-    </script>
-    <link rel="stylesheet" href="/index.css">
+    <script src="/js/head.js"></script>
     <script>
         hljs.highlightAll();
     </script>
 </head>
 
 <body>
-    <!--导航栏-->
-    <nav class="navbar navbar-expand-lg navbar-light sticky-top shadow-sm">
-        <div class="container-fluid d-flex"><a class="navbar-brand" href="#">
-                <img src="https://cdnjson.com/images/2023/10/28/212239qsGyuK1o4RRFyM4E.png" alt="Logo" width="30" height="40" class="d-inline-block align-text-top"> 猪圈
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span> </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="/">首页</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/下载.html">下载</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/留言.html">留言</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/blog.html">文章</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/表情包">表情包</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/小玩意导航页.html">小工具&amp;小游戏</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/关于">关于</a></li>
-                    <form>
-                        <input class="form-control" type="text" id="searchInput" placeholder="搜索">
-                    </form>
-                    <!-- 搜索结果 -->
-                    <br>
-                    <ul class="searchResults bg-light rounded">
-                        <!-- 搜索结果将会动态加载到这里 -->
-                    </ul>
-                    <!-- JavaScript 代码 -->
-                    <script src="/search.js"></script>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <!--回到顶部-->
-    <div class="fixed-bottom">
-        <a href="#" class="btn btn-primary bth-sm m-2">
-            <i class="bi bi-arrow-bar-up"></i>
-        </a>
-    </div>
+   <meta charset="utf-8"/>  
+   <script src="/js/navbar.js"></script>
     <!--标题-->
     <div class="m-2">
         <div class="shadow-sm p-3 mb-5 bg-body-tertiary rounded text-center row">
@@ -72,7 +26,7 @@
                     </div>
                 </div>
                 <br>
-                <img class="d-none d-lg-block mx-auto d-block" width="30%" height="auto" src="https://cdnjson.com/images/2024/02/19/sketch1708327122557_1b0d3ba93a6b4151b.png" alt="sketch1708327122557_1b0d3ba93a6b4151b.png" border="0" />
+                <img class="d-none d-lg-block mx-auto d-block img" width="30%" height="auto" src="https://cdnjson.com/images/2024/02/19/sketch1708327122557_1b0d3ba93a6b4151b.png" alt="sketch1708327122557_1b0d3ba93a6b4151b.png" border="0" />
                 <div class="p-2 bg-primary text-white rounded col-sm">
                     <p>ksweb+魔百盒+内网穿透搭网站</p>
                 </div>
@@ -157,22 +111,7 @@
             });
         </script>
     </div>
-    <!--页脚-->
-    <footer class="mt-5 p-4 bg-dark text-white text-center">
-        <span id="runtime_span"></span>
-        <script src="/time.js"></script>
-        <br>
-        <a href="https://stats.uptimerobot.com/xE8LGHmDxB">网站监测</a>
-        <p>pig810负责运营</p>
-        <div class="btn-group">
-            <a href="/sitemap.xml" class="btn btn-warning">网站地图查看
-                <i class="bi bi-diagram-2"></i>
-            </a>
-            <a href="https://dns.rnmcnm.com" class="btn btn-primary">域名由日出提供
-                <i class="bi bi-globe"></i>
-            </a>
-        </div>
-    </footer>
+    <script src="/js/footer.js"></script>
 </body>
 
 </html>
