--- a/留言.html
+++ b/留言.html
@@ -10,20 +10,7 @@
     <script src="/js/navbar.js"></script>
     <h1>留言</h1>
     <!--评论系统-->
-    <link href="https://cdn.staticfile.org/waline/2.15.8/waline.min.css" rel="stylesheet">
-    <div id="waline"></div>
-    <script type="module">
-        import {
-            init
-        } from 'https://npm.onmicrosoft.cn/@waline/client@v2/dist/waline.mjs';
-
-
-        init({
-            el: '#waline',
-            serverURL: 'https://waline-1-i3324437.deta.app/',
-            dark: 'auto',
-        });
-    </script>
+    <script src="/js/twikoo.js"></script>
     <br>
     <br>
     <script src="/js/footer.js"></script>
