--- a/ipfs-404.html
+++ b/ipfs-404.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+    <meta charset="utf-8"/>
     <script src="/js/navbar.js"></script>
     <div class="mt-4 p-5 rounded m-3 shadow bg-body-tertiary">
         <h1 class="d-flex text-center" style="font-size:30vw">4<img class="img-fluid" height="10%" width="50%" src="https://cdnjson.com/images/2023/10/28/212239qsGyuK1o4RRFyM4E.png" alt="212239qsGyuK1o4RRFyM4E.png" border="0">4</h1>
