--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <h3>小猪漫画</h3>
                     <h6>由小猪编写</h6>
                     <p>停止更新</p>
-                    <a href="/小猪漫画" class="btn btn-primary">阅读
+                    <a href="https://cdnjson.com/album/xiao-zhu-man-hua-1.fRUh" class="btn btn-primary">阅读
                         <i class="bi bi-journal-text"></i>
                     </a>
                 </div>
@@ -75,7 +75,7 @@
             <h4 class="display-4">联系我们</h4>
             <p><b><i class="bi bi-envelope"></i>&nbsp;邮箱:</b>pig810@outlook.com</p>
             <p><b><i class="bi bi-github"></i>&nbsp;github:</b>pig</p>
-            <p><b>matrix:</b></p><a href="https://matrix.to/#/@pig810:chat.neboer.site">@pig810:chat.neboer.site</a></p>
+            <p><b><i class="bi bi-chat"></i>matrix:</b></p><a href="https://matrix.to/#/@pig810:chat.neboer.site">@pig810:chat.neboer.site</a></p>
         </div>
     </div>
     <!--页脚-->
