--- a/文章/使用Nerchat!聊天/index.html
+++ b/文章/使用Nerchat!聊天/index.html
@@ -34,8 +34,8 @@
         <div class="container">
             <h2>什么是matrix,nerchat!,matrix客户端？</h2>
             <p>matrix是去中心化的、开放的加密聊天协议</p>
-            <p>nerchat!是neboer搭建的公益matrix聊天服务器</p>
-            <p>matrix客户端是连接matrix服务器的客户端,不像微信qq那样只有官方客户端,主要有官方的Element,和第三方的fluffychat,基于Element的SchildiChat等</p>
+            <p>nerchat!是neboer等人搭建的公益matrix聊天服务器</p>
+            <p>matrix客户端是连接matrix服务器的客户端,不像微信qq那样只有官方客户端,主要有官方的Element,和第三方的fluffychat,基于Element的SchildiChat等，可以根据个人需求选择</p>
             <h2>别画饼了，快教我怎么用！</h2>
             <h2>Element教程</h2>
             <p>看图</p>
