--- a/文章/畅游暗网/index.html
+++ b/文章/畅游暗网/index.html
@@ -54,28 +54,7 @@
         <p>出现与这个类似的页面，说明你成功了</p>
         <p>推荐这个暗网的网址导航，很全<a href="http://666666666tjjjeweu5iikuj7hkpke5phvdylcless7g4dn6vma2xxcad.onion/index.html?setlang=cn">传送门</a></p>
         <hr>
-        <!--评论系统-->
-        <link href="https://cdn.staticfile.org/waline/2.15.8/waline.min.css" rel="stylesheet">
-        <div id="waline"></div>
-        <script type="module">
-            import {
-                init
-            } from 'https://npm.onmicrosoft.cn/@waline/client@v2/dist/waline.mjs';
-
-
-            init({
-                el: '#waline',
-                serverURL: 'https://waline-1-i3324437.deta.app/',
-                reaction: true,
-                reaction: [
-                    'https://cdnjson.com/images/2023/11/26/-a40hq-bup06.png',
-                    'https://cdnjson.com/images/2023/11/26/-azzz0-v6yi5.png',
-                    'https://cdnjson.com/images/2023/11/26/-a7lfz-jjocw.png',
-                ],
-                dark: 'auto',
-                pageview: true,
-            });
-        </script>
+         <script src="/js/twikoo.js"></script>
     </div>
     <script src="/js/footer.js"></script>
 </body>
