--- a/文章/安卓浏览器/index.html
+++ b/文章/安卓浏览器/index.html
@@ -24,19 +24,18 @@
     <meta charset="utf-8"/>  
     <script src="/js/navbar.js"></script>
     <!--标题-->
-    <div class="m-3">
-        <div class="shadow-sm p-3 mb-5 bg-body-tertiary rounded text-center">
-            <h1 class="display-1">安卓浏览器推荐</h1><br>
-            <div class="container">
-                <time>2023.3.2</time>
-                <div id="article-info">
-                    阅读量: <span class="waline-pageview-count" data-path="<Your/Path/Name>"></span>
-                </div>
+    <div class="m-2">
+        <div class="p-3 shadow-sm rounded text-center row">
+            <div class="col-md">
+                <h1 class="display-1">安卓浏览器测评</h1><br>
             </div>
-            <br>
-            <div class="row">
+            <div class="col-md">
+                <div class="container">
+                    <time>2024.8.25更新</time>
+                </div>
+                <br>
                 <div class="p-2 bg-primary text-white rounded col-sm">
-                    <p>安卓浏览器推荐：edge，foss，Iceraven</p>
+                    <p>Chromium系，firefox系，无内核浏览器等</p>
                 </div>
             </div>
         </div>
@@ -53,52 +52,34 @@
         <div class="mask">废话</div>在pig810教盲憨用邮箱时，我看到了盲憨的屎山浏览器，甚至比我的网站代码还屎山（迫真）
         为什么不要用屎山浏览器？
         因为屎山浏览器都是小厂糊的，盗你数据不用说了，功能还贼少，想去Github，没个翻译，去广告十分甚至九分多的网站，没个广告截拦器
-        更重要的事，浏览器内核不是blink就是webkit就是gekco要么就是用的系统的webview就是所以除了好用不好用，没啥区别，都是一类轮子
+        更重要的事，浏览器内核不是blink就是webkit就是gekco要么就是用的系统的webview(无内核)就是所以除了好用不好用，没啥区别，都是一类轮子
         不试不知道，逝逝就逝逝
         </p>
-        <img class="img-fluid rounded img" src="https://cdnjson.com/images/2023/10/22/Screenshot_20231016_213102_com.moying.browserplus.jpg" alt="Screenshot_20231016_213102_com.moying.browserplus.jpg" border="0">
+        <img class="mx-auto d-block rounded img" height="50%" width="au" src="https://cdnjson.com/images/2023/10/22/Screenshot_20231016_213102_com.moying.browserplus.jpg" alt="Screenshot_20231016_213102_com.moying.browserplus.jpg" border="0">
         <p class="text-center">没有翻译</p>
-        <img class="img-fluid rounded img" src="https://cdnjson.com/images/2023/10/22/Screenshot_20231016_212939_com.moying.browserplus.jpg" alt="Screenshot_20231016_212939_com.moying.browserplus.jpg" border="0">
+        <img class="mx-auto d-block rounded img" height="50%" width="auto" src="https://cdnjson.com/images/2023/10/22/Screenshot_20231016_212939_com.moying.browserplus.jpg" alt="Screenshot_20231016_212939_com.moying.browserplus.jpg" border="0">
         <p class="text-center">sb广告</p>
         <p>推荐大家用<strong>edge，foss或Iceraven（冰鸦）</strong><br>
         <h4>edge-基于chromium</h4>
         <br>
-        真心推荐大家用这个，翻译(微软自家的） 广告截拦（adblock plus）收藏夹，资讯都有。但是有点《小》bug，更新很及时，内核时刻最新
+        翻译(微软自家的Bing翻译） 广告截拦（adblock plus）收藏夹，资讯都有。但是有点《小》bug，更新很及时，内核时刻最新
         附上图片
         </p>
         <img class="img-fluid rounded img" src="https://cdnjson.com/images/2023/10/22/Screenshot_20231022_123836_com.microsoft.emmx.jpg" alt="Screenshot_20231022_123836_com.microsoft.emmx.jpg" border="0" />
         <img class="img-fluid rounded img" src="https://cdnjson.com/images/2023/10/22/Screenshot_20231022_123644_com.microsoft.emmx.jpg" alt="Screenshot_20231022_123644_com.microsoft.emmx.jpg" border="0">
         <p class="text-center">翻译，广告截拦，主页
         <p>
-        <h4>自由软件-foss-无内核</h4>
-        <p>一听这名字就很foss（更新随缘</p>
+        <h4>F-Droid上的浏览器均为无内核浏览器</h4>
+        <p>Foss browser</p>
         <img class="img-fluid rounded" src="https://cdnjson.com/images/2023/10/22/Screenshot_20231016_211734_de.baumann.browser.jpg" alt="Screenshot_20231016_211734_de.baumann.browser.jpg" border="0" />
         <p>
+        <p>FREE browser</p>
         <h4>firefox分支-Iceraven</h4><br>
         很小众，和edge差不多，就是是gekco内核，有一个天大的优点-能加插件！！！！
         </p>
-        <!--评论系统-->
-        <link href="https://cdn.staticfile.org/waline/2.15.8/waline.min.css" rel="stylesheet">
-        <div id="waline"></div>
-        <script type="module">
-            import {
-                init
-            } from 'https://unpkg.com/@waline/client@v2/dist/waline.mjs';
-
-
-            init({
-                el: '#waline',
-                serverURL: 'https://waline-1-i3324437.deta.app/',
-                reaction: true,
-                reaction: [
-                    'https://img1.imgtp.com/2023/10/22/Na0XAAut.ico',
-                    'https://img1.imgtp.com/2023/10/22/g1ex8MNk.ico',
-                    'https://img1.imgtp.com/2023/10/22/ETThSE3z.ico',
-                ],
-                dark: 'auto',
-            });
-        </script>
-    </div>
+        <script src="/js/twikoo.js"></script>
+    </div>     
+    <script src="/js/footer.js"></script>
 </body>
 
 </html>
