--- a/小玩意导航页.html
+++ b/小玩意导航页.html
@@ -12,6 +12,7 @@
     <h1 class="text-center">游戏</h1> <a href="/工具&amp;小游戏/复选框画板.html" class="btn btn-outline-primary">复选框画板</a>
     <a href="/工具&amp;小游戏/电子木鱼.html" class="btn btn-outline-primary">电子木鱼</a>
     <a href="/工具&amp;小游戏/快速复选框.html" class="btn btn-outline-primary">复选框游戏</a>
+    <a href="/工具&amp;小游戏/captcha.html" class="btn btn-outline-primary">验证码</a>
     <br> <br>
     <h1 class="text-center">工具</h1>
     <a href="/工具&amp;小游戏/打字板.html" class="btn btn-outline-primary">打字板</a>
