--- a/下载.html
+++ b/下载.html
@@ -11,9 +11,29 @@
     <script src="/js/navbar.js"></script>
     <div class="row m-3">
         <h1 class="text-center">下载</h1>
+        <p>点击按钮下载</p>
         <br>
         <div class="col-md text-center">
-            啥也没有
+           <div class="card">
+             <p>新创捣蛋猪</p>
+             <a class="btn btn-primary" href="https://8055.kstore.space/download/8055/bple/%E6%96%B0%E5%88%9BUnity%202022.1%20Android.apk" role="button">捣蛋猪新创2022mod</a>
+           </div>
+            <br>
+           <div class="card">
+             <p>BPRE</p>
+             <a class="btn btn-primary" href="https://8055.kstore.space/bple/BP__RE.Delta-Epsilon%202%20for%20Android.apk" role="button">BPRE ~新创改</a>
+           </div>
+
+            <br>
+            <div class="card">
+              <p>Iceraven浏览器</p>
+              <a class="btn btn-primary" href="https://github.moeyy.xyz/https://github.com/fork-maintainers/iceraven-browser/releases/download/iceraven-2.23.0/iceraven-2.23.0-browser-arm64-v8a-forkRelease.apk" role="button">Iceraven浏览器 ～基于firefox的隐私保护优秀的浏览器</a>
+            </div>
+            <br>
+            <div class="card">
+              <p>铁锈战争 ～不是免费游戏，支持正版请去steam下载</p>
+              <a class="btn btn-primary" href="https://pan.huang1111.cn/s/NkxbQf1" role="button">铁锈战争</a>
+            </div>
             <br>
             <br>
         </div>
