--- a/答案.html
+++ b/答案.html
@@ -12,6 +12,7 @@
     <script src="/js/navbar.js"></script>
     <a href="/pdfs/道法答案.pdf">道法答案</a>
     <a href="/pdfs/历史答案.pdf">历史答案</a>
+    <a href="/pdfs/数学答案.pdf">数学答案</a>
     
         <!--页脚-->
     <script src="/js/footer.js"></script>
