--- a/index.html
+++ b/index.html
@@ -16,21 +16,19 @@
             <div class="container-fluid bg-primary text-center rounded shadow-sm">
                 <h4 class="text-center text-white">pig810的个人网站</h4>
                 <i class="bi bi-star"></i>
-                <p class="text-center text-white">nqh.920f.top<br>nqh.ds666.top跑路<br>nqhyee.vsc.icu喜提GFW</p>
+                <p class="text-center text-white">nqh.cloudns.be<br>nqh.ds666.top跑路<br>nqhyee.vsc.icu喜提GFW</p>
             </div> <br>
             <!-- 栏目 -->
             <ul class="nav nav-underline" role="tablist">
-                <li class="nav-item"><a class="nav-link active" data-bs-toggle="tab" href="#home">小猪漫画</a></li>
+                <li class="nav-item"><a class="nav-link active" data-bs-toggle="tab" href="#home">答案</a></li>
                 <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#menu2">语录</a></li>
                 <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#menu3">Blog</a></li>
             </ul>
             <!-- 内容 -->
             <div class="tab-content">
                 <div id="home" class="container tab-pane active"><br>
-                    <h3>小猪漫画</h3>
-                    <h6>由小猪编写</h6>
-                    <p>停止更新</p>
-                    <a href="https://cdnjson.com/album/xiao-zhu-man-hua-1.fRUh" class="btn btn-primary">阅读
+                    <h3>答案</h3>
+                    <a href="/答案.html" class="btn btn-primary">阅读
                         <i class="bi bi-journal-text"></i>
                     </a>
                 </div>
