--- a/下载.html
+++ b/下载.html
@@ -34,6 +34,11 @@
               <p>铁锈战争 ～不是免费游戏，支持正版请去steam下载</p>
               <a class="btn btn-primary" href="https://pan.huang1111.cn/s/NkxbQf1" role="button">铁锈战争</a>
             </div>
+                     <br>
+            <div class="card">
+              <p>Nelement</p>
+              <a class="btn btn-primary" href="https://ghproxy.cc/https://github.com/Neboer/Nelement/releases/download/v1.6.20/vector-fdroid-arm64-v8a-release.apk" role="button">开源聊天软件，使用matrix协议</a>
+            </div>
             <br>
             <br>
         </div>
