--- a/下载.html
+++ b/下载.html
@@ -37,7 +37,7 @@
                      <br>
             <div class="card">
               <p>Nelement</p>
-              <a class="btn btn-primary" href="https://ghproxy.cc/https://github.com/Neboer/Nelement/releases/download/v1.6.20/vector-fdroid-arm64-v8a-release.apk" role="button">开源聊天软件，使用matrix协议</a>
+              <a class="btn btn-primary" href="https://github.tmby.shop/https://github.com/Neboer/Nelement/releases/download/v1.6.20/vector-fdroid-arm64-v8a-release.apk" role="button">开源聊天软件，使用matrix协议</a>
             </div>
             <br>
             <br>
