--- a/答案.html
+++ b/答案.html
@@ -13,9 +13,8 @@
     <a href="/pdfs/道法答案.pdf">道法答案</a>
     <a href="/pdfs/历史答案.pdf">历史答案</a>
     <a href="/pdfs/数学答案.pdf">数学答案</a>
+    <script src="/js/twikoo.js"></script>
     <p class="fst-italic">Design by 能启航</p>
-    <br>
-    <script src="/js/twkoo.js"></script>
         <!--页脚-->
     <script src="/js/footer.js"></script>
 </body>
