--- a/文章/下一代IM协议 『matrix』/index.html
+++ b/文章/下一代IM协议 『matrix』/index.html
@@ -40,5 +40,9 @@
         <h4>用户</h4>
         <p>如果你要添加好友，可通过搜索对方ID来发送申请，用户ID格式为@<用户昵称>:<家服务器地址>，例如@pig810:matrix.org</p>
         <p>默认情况下，管理员可以设置成员在房间里的权限(发送消息、封禁账户、踢出房间等需要的权限）权限大小按0～100的数字划分，0是用户，50是协管员（或者叫主持人），100是管理员（权力最大）</p>
-        
+        <h3>选择合适的matrix客户端(也称信使)</h3>
+        <h4>官方-Element</h4>
+        <p>首次打开Element是比较困难的，因为Element会默认连接matrix.org，需要一定的手段强制其使用代理才能在中国正常使用这个软件。桌面端不如用网页版，移动端不如用fluffychat，很反人类，不好用，也就注册账号用</p>
+        <h4>第三方-fluffychat</h4>
+        <p>一个很棒的matrix客户端，安卓版有个不支持后台侦听通知的缺点，其他都很</p>
         
