--- a/blog.html
+++ b/blog.html
@@ -46,7 +46,7 @@
                 <!--matrix-->
                 <div class="shadow-sm p-3 b-3 bg-body-tertiary rounded col-md">
                     <div class="d-flex">
-                        <a href="/文章/下一代IM协议『matrix』/">
+                        <a href="/文章/下一代IM协议 『matrix』">
                             <h2>matrix的使用，未来。</h2>
                         </a>
                     </div>
