--- a/文章/下一代IM协议 『matrix』/index.html
+++ b/文章/下一代IM协议 『matrix』/index.html
@@ -16,7 +16,8 @@
                 <h1 class="display-1">下一代IM协议『matrix』</h1><br>
             </div>
             <div class="col-md">
-                    <span id="twikoo_visitors">0</span>
+                    <p>阅读量：<span id="twikoo_visitors">0</span></p>
+                    <br>
                     <time>2024.9.25</time>
                 <br>
                 <div class="p-2 bg-primary text-white rounded col-sm">
