--- a/文章/下一代IM协议 『matrix』/index.html
+++ b/文章/下一代IM协议 『matrix』/index.html
@@ -16,7 +16,7 @@
                 <h1 class="display-1">下一代IM协议『matrix』</h1><br>
             </div>
             <div class="col-md">
-                    <p>阅读量：<span id="twikoo_visitors">0</span></p>
+                    <p>阅读量：<span id="twikoo_visitors">获取中…</span></p>
                     <br>
                     <time>2024.9.25</time>
                 <br>
@@ -44,7 +44,7 @@
         <h4>官方-Element</h4>
         <p>首次打开Element是比较困难的，因为Element会默认连接matrix.org，需要一定的手段强制其使用代理才能在中国正常使用这个软件。桌面端不如用网页版，移动端不如用fluffychat，很反人类，不好用，也就注册账号用</p>
         <h4>第三方-fluffychat</h4>
-        <p>一个很棒的matrix客户端，安卓版有个不支持后台侦听通知的缺点，其他都很</p>
+        <p>一个很棒的matrix客户端，安卓版有个不支持后台侦听通知的缺点，其他都很棒</p>
         <script src="/js/twikoo.js"></script>
     </div>    
     <script src="/js/footer.js"></script>
