--- a/blog.html
+++ b/blog.html
@@ -47,7 +47,7 @@
                 <div class="shadow-sm p-3 b-3 bg-body-tertiary rounded col-md">
                     <div class="d-flex">
                         <a href="/文章/下一代IM协议 『matrix』">
-                            <h2>matrix的使用，未来。</h2>
+                            <h2>下一代IM协议 『matrix』</h2>
                         </a>
                     </div>
                     <span class="badge bg-secondary">通讯</span>
@@ -57,9 +57,9 @@
                         <time>2024.9.16</time>
                     </p>
                 </div>
-            </div>
-            &nbsp;
-            &nbsp;
+          
+                &nbsp;
+               &nbsp;
 
               
 
