--- a/答案.html
+++ b/答案.html
@@ -14,6 +14,7 @@
     <a href="/pdfs/历史答案.pdf">历史答案</a>
     <a href="/pdfs/数学答案.pdf">数学答案</a>
     <a href="/pdfs/语文答案.pdf">语文答案</a>
+    <a href="/pdfs/生物答案.pdf">生物答案</a>
     <script src="/js/twikoo.js"></script>
     <p class="fst-italic">Design by 能启航</p>
         <!--页脚-->
