--- a/下载.html
+++ b/下载.html
@@ -27,19 +27,23 @@
             <br>
             <div class="card">
               <p>Iceraven浏览器</p>
-              <a class="btn btn-primary" href="https://github.moeyy.xyz/https://github.com/fork-maintainers/iceraven-browser/releases/download/iceraven-2.23.0/iceraven-2.23.0-browser-arm64-v8a-forkRelease.apk" role="button">Iceraven浏览器 ～基于firefox的隐私保护优秀的浏览器</a>
+              <a class="btn btn-primary" href="https://github.moeyy.xyz/https://github.com/fork-maintainers/iceraven-browser/releases/download/iceraven-2.24.0/iceraven-2.24.0-browser-arm64-v8a-forkRelease.apk" role="button">Iceraven浏览器 ～基于firefox的隐私保护优秀的浏览器</a>
             </div>
             <br>
             <div class="card">
               <p>铁锈战争 ～不是免费游戏，支持正版请去steam下载</p>
               <a class="btn btn-primary" href="https://pan.huang1111.cn/s/NkxbQf1" role="button">铁锈战争</a>
             </div>
-                     <br>
+            <br>
             <div class="card">
               <p>Nelement</p>
               <a class="btn btn-primary" href="https://github.tmby.shop/https://github.com/Neboer/Nelement/releases/download/v1.6.20/vector-fdroid-arm64-v8a-release.apk" role="button">开源聊天软件，使用matrix协议</a>
             </div>
             <br>
+            <div class="card">
+              <p>Tailscale</p>
+              <a class="btn btn-primary" href="https://mirror.nyist.edu.cn/fdroid/repo/com.tailscale.ipn_254.apk" role="button">异地组网软件，可用于游戏联机</a>
+            </div>
             <br>
         </div>
     </div>
