--- a/下载.html
+++ b/下载.html
@@ -45,6 +45,11 @@
               <a class="btn btn-primary" href="https://mirror.nyist.edu.cn/fdroid/repo/com.tailscale.ipn_254.apk" role="button">异地组网软件，可用于游戏联机</a>
             </div>
             <br>
+            <div class="card">
+              <p>Mindustry</p>
+              <a class="btn btn-primary" href="https://mirror.nyist.edu.cn/fdroid/repo/io.anuke.mindustry_1070.apk" role="button">像素工厂fdroid-build版</a>
+            </div>
+            <br>
         </div>
     </div>
     <script src="/js/footer.js"></script>
