--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <!-- 联系方式 -->
             <h4 class="display-4">联系我们</h4>
             <p><b><i class="bi bi-envelope"></i>&nbsp;邮箱:</b>pig810@outlook.com</p>
-            <p><b><i class="bi bi-github"></i>&nbsp;github:</b>pig</p>
+            <p><b><i class="bi bi-github"></i>&n)bsp;github:</b>pigyee</p>
             <p><b><i class="bi bi-chat"></i>matrix:</b></p><a href="https://matrix.to/#/@pig810:chat.neboer.site">@pig810:chat.neboer.site</a></p>
         </div>
     </div>
