--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
         <!--卡片-->                 
                <!--matrix-->
-                <div class="shadow-sm p-3 b-3 bg-body-tertiary rounded col-md">
+                <div class="border shadow-none p-3 b-3 bg-body-tertiary rounded col-md">
                     <div class="d-flex">
                         <a href="/文章/下一代IM协议 『matrix』">
                             <h2>下一代IM协议 『matrix』</h2>
@@ -67,11 +67,11 @@
                 </div>
         &nbsp;
         &nbsp;
-        <div class="shadow-sm p-3 b-3 bg-body-tertiary rounded col-md">
+        <div class="border shadow-none p-3 b-3 bg-body-tertiary rounded col-md">
             <!-- 联系方式 -->
             <h4 class="display-4">联系我们</h4>
             <p><b><i class="bi bi-envelope"></i>&nbsp;邮箱:</b>pig810@outlook.com</p>
-            <p><b><i class="bi bi-github"></i>&n)bsp;github:</b>pigyee</p>
+            <p><b><i class="bi bi-github"></i>&nbsp;github:</b>pigyee</p>
             <p><b><i class="bi bi-chat"></i>matrix:</b></p><a href="https://matrix.to/#/@pig810:chat.neboer.site">@pig810:chat.neboer.site</a></p>
         </div>
     </div>
