--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>首页:猪圈-pig810运营</title>
     <script src="/js/head.js"></script>
+    <!-- Clarity tracking code for https://nqh.cloudns.be/ --><script>    (function(c,l,a,r,i,t,y){        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i+"?ref=bwt";        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);    })(window, document, "clarity", "script", "ohhxka4sd5");</script>
 </head>
 
 <body>
