--- a/blog.html
+++ b/blog.html
@@ -14,6 +14,7 @@
             margin: 30px;
         }
     </style>
+
 </head>
 
 <body>
@@ -44,7 +45,7 @@
         <div id="home" class="container tab-pane active">
             <div class="row">
                 <!--matrix-->
-                <div class="shadow-sm p-3 b-3 bg-body-tertiary rounded col-md">
+                <div class="border shadow-sm p-3 b-3 bg-body-tertiary rounded col-md">
                     <div class="d-flex">
                         <a href="/文章/下一代IM协议 『matrix』">
                             <h2>下一代IM协议 『matrix』</h2>
@@ -65,7 +66,7 @@
 
 
                 <!--nas-->
-                <div class="shadow-sm p-3 b-3 bg-body-tertiary rounded col-md">
+                <div class="border shadow-sm p-3 b-3 bg-body-tertiary rounded col-md">
                     <div class="d-flex">
                         <a href="/文章/nas/">
                             <h2>把移动套餐的魔百盒魔改成nas</h2>
@@ -85,7 +86,7 @@
 
             <div class="row">
                 <!--建网站-->
-                <div class="shadow-sm p-3 b-3 bg-body-tertiary rounded col-md">
+                <div class="border shadow-sm p-3 b-3 bg-body-tertiary rounded col-md">
                     <a class="" href="/文章/建网站/">
                         <h2>怎么建一个网站（需要有脑子，不需要服务器）</h2>
                         <h5>某某应该不会罢（</h5>
@@ -101,7 +102,7 @@
 
 
                 <!--安卓浏览器推荐-->
-                <div class="shadow-sm p-3 b-3 bg-body-tertiary rounded col-md">
+                <div class="border shadow-sm p-3 b-3 bg-body-tertiary rounded col-md">
                     <a href="/文章/安卓浏览器/">
                         <h2>安卓浏览器推荐</h2>
                         <mg class="rounded img-fluid" height="32%" width="40%" src="https://cdnjson.com/images/2023/10/29/sketch1698577243459.png" alt="三大金刚" border="0" />
