--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
         <!--卡片-->                 
                <!--matrix-->
-                <div class="border shadow-none p-3 b-3 bg-body-tertiary rounded col-md">
+                <div class="border shadow-sm p-3 b-3 bg-body-tertiary rounded col-md">
                     <div class="d-flex">
                         <a href="/文章/下一代IM协议 『matrix』">
                             <h2>下一代IM协议 『matrix』</h2>
@@ -68,7 +68,7 @@
                 </div>
         &nbsp;
         &nbsp;
-        <div class="border shadow-none p-3 b-3 bg-body-tertiary rounded col-md">
+        <div class="border shadow-sm p-3 b-3 bg-body-tertiary rounded col-md">
             <!-- 联系方式 -->
             <h4 class="display-4">联系我们</h4>
             <p><b><i class="bi bi-envelope"></i>&nbsp;邮箱:</b>pig810@outlook.com</p>
