--- a/下载.html
+++ b/下载.html
@@ -27,7 +27,7 @@
             <br>
             <div class="card">
               <p>Iceraven浏览器</p>
-              <a class="btn btn-primary" href="https://github.moeyy.xyz/https://github.com/fork-maintainers/iceraven-browser/releases/download/iceraven-2.24.0/iceraven-2.24.0-browser-arm64-v8a-forkRelease.apk" role="button">Iceraven浏览器 ～基于firefox的隐私保护优秀的浏览器</a>
+              <a class="btn btn-primary" href="https://github.moeyy.xyz/https://github.com/fork-maintainers/iceraven-browser/releases/download/iceraven-2.25.2/iceraven-2.25.2-browser-arm64-v8a-forkRelease.apk" role="button">Iceraven浏览器 ～基于firefox的隐私保护优秀的浏览器</a>
             </div>
             <br>
             <div class="card">
@@ -47,9 +47,13 @@
             <br>
             <div class="card">
               <p>Mindustry</p>
-              <a class="btn btn-primary" href="https://mirror.nyist.edu.cn/fdroid/repo/io.anuke.mindustry_1070.apk" role="button">像素工厂fdroid-build版</a>
+              <a class="btn btn-primary" href="https://anuke.itch.io/mindustry" role="button">像素工厂</a>
             </div>
             <br>
+            <div class="card">
+              <p>droid-ify</p>
+              <a class="btn btn-primary" href="https://mirror4.nyist.edu.cn/fdroid/repo/com.looker.droidify_630.apk" role="button">droid-ify</a>
+            </div>
         </div>
     </div>
     <script src="/js/footer.js"></script>
