--- a/下载.html
+++ b/下载.html
@@ -46,8 +46,18 @@
             </div>
             <br>
             <div class="card">
+              <p>Mindustry-BE</p>
+              <a class="btn btn-primary" href="https://github.moeyy.xyz/https://github.moeyy.xyz/" role="button">像素工厂bleeding-edge</a>
+            </div>
+            <br>
+            <div class="card">
               <p>Mindustry</p>
-              <a class="btn btn-primary" href="https://anuke.itch.io/mindustry" role="button">像素工厂</a>
+              <a class="btn btn-primary" href="https://anuke.itch.io/mindustry" role="button">像素工厂学术端</a>
+            </div>
+            <br>
+            <div class="card">
+              <p>Mindustry-CN-ARC</p>
+              <a class="btn btn-primary" href="https://github.moeyy.xyz/https://github.com/Jackson11500/Mindustry-CN-ARC-Builds/releases/latest/download/Mindustry-CN-ARC-Android-30850.apk" role="button">像素工厂学术端</a>
             </div>
             <br>
             <div class="card">
