--- a/下载.html
+++ b/下载.html
@@ -52,7 +52,7 @@
             <br>
             <div class="card">
               <p>Mindustry</p>
-              <a class="btn btn-primary" href="https://anuke.itch.io/mindustry" role="button">像素工厂学术端</a>
+              <a class="btn btn-primary" href="https://anuke.itch.io/mindustry" role="button">像素工厂</a>
             </div>
             <br>
             <div class="card">
