--- a/下载.html
+++ b/下载.html
@@ -37,7 +37,7 @@
             <br>
             <div class="card">
               <p>Nelement</p>
-              <a class="btn btn-primary" href="https://github.tmby.shop/https://github.com/Neboer/Nelement/releases/download/v1.6.20/vector-fdroid-arm64-v8a-release.apk" role="button">开源聊天软件，使用matrix协议</a>
+              <a class="btn btn-primary" href="https://github.moeyy.xyz/https://github.com/Neboer/Nelement/releases/download/v1.6.20/vector-fdroid-arm64-v8a-release.apk" role="button">开源聊天软件，使用matrix协议</a>
             </div>
             <br>
             <div class="card">
@@ -47,7 +47,7 @@
             <br>
             <div class="card">
               <p>Mindustry-BE</p>
-              <a class="btn btn-primary" href="https://github.moeyy.xyz/https://github.moeyy.xyz/" role="button">像素工厂bleeding-edge</a>
+              <a class="btn btn-primary" href="https://www.mindustry.top/game" role="button">像素工厂bleeding-edge</a>
             </div>
             <br>
             <div class="card">
