--- a/教程.html
+++ b/教程.html
@@ -34,8 +34,11 @@
   <img class="mx-auto d-block" width="50%" height="50%" src="https://s2.loli.net/2025/01/13/bYsX6ROQIP21npL.png" />
   <p>把刚才的配置文件链接丢进去，提交，然后保存</p>
   <img class="mx-auto d-block" width="50%" height="50%" src="https://s2.loli.net/2025/01/13/Jz6nTfaKrFsiqtQ.png" />
-  <p>选一个能用的节点，就可以了</p>
+  <p>选一个能用的节点</p>
   <img class="mx-auto d-block" width="50%" height="50%" src="https://s2.loli.net/2025/01/13/rOQjboRfYdEsDeF.jpg" />
+  <p>启动!然后就能用了</p>
+  <img class="mx-auto d-block" width="50%" height="50%" src="https://s2.loli.net/2025/01/14/ClsoceB4rDGwLYU.png" />
+
   <script src="/js/twikoo.js"></script>
 </div>
     <script src="/js/footer.js"></script>
